# car-advisor

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  gitignore  pyproject.toml
.devcontainer/: devcontainer.json
data/: ademe-car-labelling-v2.csv
data/processed/: cars_clean.csv  cars_eng.csv
docs/: Nouveautes_quinzaine.odt  explication_code
src/: __main__.py  assistance.py  data_cleaner.py  data_loader.py  exceptions.py  main.py  menus.py  validator.py
src/car/: __main__.py  assistance.py  config.py  data_loader.py  database.py  explorer.py  ingest.py
src/car/api/: dependencies.py  main.py  schemas.py
src/car/cli/: assistance.py  menus.py  test_recommendation.py
src/car/data/: loader.py
src/car/filters/: body_filter.py  budget_filter.py  energy_filter.py
src/car/processing/: cleaner.py
src/car/services/: comparison_service.py  recommendation_service.py  statistics_service.py  visualization_service.py
tests/: conftest.py  test_data_loader.py
tests/test_cars/: test_coverage.py
tests/test_cars/test_api/: test_api.py
tests/test_cars/test_cli/: test_assistance.py  test_main_menus.py  test_menus.py  test_run_cli.py  test_select_option.py  test_show_help.py
tests/test_cars/test_data/: test_loader.py
tests/test_cars/test_filters/: test_body.py  test_budjet.py  test_energy.py  test_filters.py
tests/test_cars/test_processing/: test_cleaner.py
tests/test_cars/test_services/: test_ask_continue_choice.py  test_ask_main_menus_choice.py  test_compare_cars.py  test_comparison_service.py  test_compute_global_statistics.py  test_display_brand_list_with_counts.py  test_filter_cars_by_brands.py  test_fuzzy_choose_brand.py  test_get_available_brands.py  test_load_cars.py  test_normalize_text.py  test_radar_chart.py  (+4 more)
(+1 files in other folders)
