[tool.poetry]
name = "carlabelling"
version = "0.1.0"
description = "This is project based on the climate impact of new vehicules"
authors = ["oscar.li@univ-reims.fr"]
packages = [{ include = "carlabelling", from = "src" }]
readme = "README.md"

[[tool.poetry.source]]
name = "public"
url = "https://pypi.org/simple"
priority = "primary"

[tool.poetry.dependencies]
python = ">=3.14,<3.15"
numpy = "2.4.1"
pandas = "3.0.0"
pandera = "0.28.1"
psycopg = "3.3.2"
pydantic = "2.12.5"
pydantic-settings = "2.12.0"
sqlalchemy = "2.0.46"
typer = "0.21.1"


[tool.poetry.group.dev.dependencies]
bandit = "1.9.3"
freezegun = "1.5.5"
mypy = "1.19.1"
mypy-extensions = "1.1"
pip-audit = "2.10.0"
pre-commit = "4.5.1"
pytest = "9.0.2"
pytest-cov = "7.0.0"
ruff = "0.14.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source = ["carlabelling"]
omit = [
    "*/__init__.py",
    "*/__main__.py",
    "*/data_access/utils.py",
    "tests/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError"
]
