[project]
name = "projet-mdpd"
version = "0.1.0"
description = ""
authors = [
    {name = "Oscar"}
    {name = "Thibaut"}
    {name = "Mattéo"}
    {name = "Valentin"}
    {name = "Estelle"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy (==2.2.6)",
    "pandas (==2.3.3)",
    "python-dateutil (==2.9.0.post0)",
    "pytz (==2025.2)",
    "six (==1.17.0)",
    "tzdata (==2025.3)",
    "matplotlib (>=3.10.8,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
